--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 		<div class="fh5co-tab-wrap">
 			<ul class="fh5co-tab-menu">
 				<li class="active"><a href="#" data-tab="1"><span class="icon icon-film"></span><span class="menu-text">Сюжет</span></a></li>
-				<li><a href="#" data-tab="2"><span class="icon icon-bookmark"></span><span class="menu-text">Описание</span></a></li>
-				<li><a href="#" data-tab="3"><span class="icon icon-fire"></span><span class="menu-text">Особенности</span></a></li>
+				<li><a href="#" data-tab="2"><span class="icon icon-pencil-square-o"></span><span class="menu-text">Описание</span></a></li>
+				<li><a href="#" data-tab="3"><span class="icon icon-gamepad"></span><span class="menu-text">Особенности</span></a></li>
 				<li><a href="#" data-tab="4" data-pie="yes"><span class="icon icon-camera"></span><span class="menu-text">Визуал</span></a></li>
 			</ul>
 			<div class="fh5co-tab-content active" data-content="1">
@@ -72,8 +72,8 @@
 									<i class="icon-star"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>фича 1</h2>
-									<p>Описание фичи</p>
+									<h2>Заголовок</h2>
+									<p>Описание</p>
 								</div>
 							</div>
 							
@@ -82,8 +82,8 @@
 									<i class="icon-star"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>фича 2</h2>
-									<p>Описание фичи</p>
+									<h2>Заголовок</h2>
+									<p>Описание</p>
 								</div>
 							</div>
 							
@@ -92,8 +92,8 @@
 									<i class="icon-star"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>фича 3</h2>
-									<p>Описание фичи</p>
+									<h2>Заголовок</h2>
+									<p>Описание</p>
 								</div>
 							</div>
 
@@ -115,7 +115,7 @@
 								</div>
 								<div class="fh5co-text">
 									<h2>Особенность 1</h2>
-									<p>Описание.</p>
+									<p>Описание</p>
 								</div>
 							</div>
 
@@ -125,7 +125,7 @@
 								</div>
 								<div class="fh5co-text">
 									<h2>Особенность 1</h2>
-									<p>Описание.</p>
+									<p>Описание</p>
 								</div>
 							</div>
 
@@ -135,7 +135,7 @@
 								</div>
 								<div class="fh5co-text">
 									<h2>Особенность 1</h2>
-									<p>Описание.</p>
+									<p>Описание</p>
 								</div>
 							</div>
 
