--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 				<div class="fh5co-content-inner">
 					<div class="row">
 						<div class="col-md-12">
-							<p>Тут описываем фичи.</p>
+							<p>Тут описываем фичи</p>
 
 							<div class="fh5co-feature">
 								<div class="fh5co-icon">
@@ -107,7 +107,7 @@
 					<div class="row">
 						<div class="col-md-12">
 
-							<p>Тут описываем особенности.</p>
+							<p>Тут описываем особенности</p>
 
 							<div class="fh5co-feature">
 								<div class="fh5co-icon">
