--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
 				<div class="fh5co-content-inner">
 					<div class="row">
 						<div class="col-md-12">
-							<p>Тут описываем фичи</p>
+							<p>Тут будет описание проекта</p>
 
 							<div class="fh5co-feature">
 								<div class="fh5co-icon">
 									<i class="icon-star"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>Заголовок</h2>
+									<h2>Пункт 1</h2>
 									<p>Описание</p>
 								</div>
 							</div>
@@ -82,7 +82,7 @@
 									<i class="icon-star"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>Заголовок</h2>
+									<h2>Пункт 2</h2>
 									<p>Описание</p>
 								</div>
 							</div>
@@ -92,7 +92,7 @@
 									<i class="icon-star"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>Заголовок</h2>
+									<h2>Пункт 3</h2>
 									<p>Описание</p>
 								</div>
 							</div>
@@ -107,7 +107,7 @@
 					<div class="row">
 						<div class="col-md-12">
 
-							<p>Тут описываем особенности</p>
+							<p>Тут описываем особенности (фичи)</p>
 
 							<div class="fh5co-feature">
 								<div class="fh5co-icon">
