--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 							<figure>
 								<img src="images/gamepad.png" alt="Free HTML5 Wesbite Template by FreeHTML5.co">
 							</figure>
-							<p>тут будет кратко описан сюжет нашего <a href="#">Хохотуна</a>. </p>
+							<p>тут будет кратко описан сюжет нашего <a href="#">Хохотуна</a> </p>
 						</div>
 					</div>
 					<div class="row">
