--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
-
 	</head>
 	<body style="background-image: url(images/bg_img.jpg);">
 	
@@ -52,7 +51,11 @@
 							<figure>
 								<img src="images/gamepad.png" alt="Free HTML5 Wesbite Template by FreeHTML5.co">
 							</figure>
-							<p>тут будет кратко описан сюжет нашего <a href="#">Хохотуна</a> </p>
+							<p><a href="#">Тема:</a> </p>
+							<p>Стрессовая игра о войне, которая происходит на кухне, где вы играете за знаменитого сборщика налогов, который не остановится ни перед чем, чтобы сделать мир лучше.</a> </p>
+							<p><a href="#">Сюжет:</a> </p>
+							<p>Продукты на кухне жили в мире и строили свое демократическое сообщество. Наш герой Мистер Зефирка собирал налоги и был лучшим в этом деле, он был счастлив вместе со своей сладкой Миссис Зефиркой. Но овощи решили что сладости отличаются от них, что они вредны. Объединившись с фруктами они устроили сладкий геноцид. Первая атака гранатом забрала Миссис Зефирку. Стресс лишил Мистера Зефирку рассудка, у него не осталось ничего, кроме ненависти, и уверенности в том, что на самом деле сладости делают мир лучше, его мир был лучше, когда в нем была Миссис Зефирка…</a> </p>
+							<p><a href="#">Команда:</a> Саня Васильев, Игорь Орлов, Стас Шульгин.</p>
 						</div>
 					</div>
 					<div class="row">
@@ -65,15 +68,14 @@
 				<div class="fh5co-content-inner">
 					<div class="row">
 						<div class="col-md-12">
-							<p>Тут будет описание проекта</p>
+							<p><a href="#">Описание:</a> </p>
 
 							<div class="fh5co-feature">
 								<div class="fh5co-icon">
 									<i class="icon-star"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>Пункт 1</h2>
-									<p>Описание</p>
+									<p>Динамичный экшн. Главный герой продвигается по кухне, разрезая различным оружием фруктово-овощных захватчиков.</p>
 								</div>
 							</div>
 							
@@ -82,8 +84,7 @@
 									<i class="icon-star"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>Пункт 2</h2>
-									<p>Описание</p>
+									<p>Несколько видов врагов со своими механиками.</p>
 								</div>
 							</div>
 							
@@ -92,8 +93,7 @@
 									<i class="icon-star"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>Пункт 3</h2>
-									<p>Описание</p>
+									<p>На кухне будут присутствовать объекты взаимодействия, которые могут как помогать так и мешать в сражениях.</p>
 								</div>
 							</div>
 
@@ -107,15 +107,14 @@
 					<div class="row">
 						<div class="col-md-12">
 
-							<p>Тут описываем особенности (фичи)</p>
+							<p><a href="#">Особенности:</a> </p>
 
 							<div class="fh5co-feature">
 								<div class="fh5co-icon">
 									<i class="icon-star-o"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>Особенность 1</h2>
-									<p>Описание</p>
+									<p >Динамика.</p>
 								</div>
 							</div>
 
@@ -124,8 +123,7 @@
 									<i class="icon-star-o"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>Особенность 1</h2>
-									<p>Описание</p>
+									<p>Легальная расчлененка.</p>
 								</div>
 							</div>
 
@@ -134,8 +132,7 @@
 									<i class="icon-star-o"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>Особенность 1</h2>
-									<p>Описание</p>
+									<p>Взаимодействие с окружением.</p>
 								</div>
 							</div>
 
@@ -148,10 +145,14 @@
 				<div class="fh5co-content-inner">
 					<div class="row">
 						<div class="col-md-12">
-							<p>Примеры визуала:</p>
+							<p><a href="#">Референсы:</a> </p>
 						</div>
-						<p>	<img src="images/1.jpg"> </p>
-						<p>	<img src="images/2.jpg"> </p>
+						<video width="600" height="400" autoplay="autoplay" loop="loop">
+						 <source src="images/video_1.mp4">
+						</video>
+						<video width="600" height="400" autoplay="autoplay" loop="loop">
+						 <source src="images/video_2.mp4">
+						</video>
 
 					</div>
 				</div>
