--- a/index.html
+++ b/index.html
@@ -147,12 +147,8 @@
 						<div class="col-md-12">
 							<p><a href="#">Референсы:</a> </p>
 						</div>
-						<video width="600" height="400" autoplay="autoplay" loop="loop">
-						 <source src="images/video_1.mp4">
-						</video>
-						<video width="600" height="400" autoplay="autoplay" loop="loop">
-						 <source src="images/video_2.mp4">
-						</video>
+						<p><img src="images/1.gif" width="500" height="300"></p>
+						<img src="images/2.gif" width="500" height="300">
 					</div>
 				</div>
 			</div>
