--- a/index.html
+++ b/index.html
@@ -147,8 +147,10 @@
 						<div class="col-md-12">
 							<p><a href="#">Референсы:</a> </p>
 						</div>
+						<center>
 						<p><img src="images/1.gif" width="500" height="300"></p>
 						<img src="images/2.gif" width="500" height="300">
+						</center>
 					</div>
 				</div>
 			</div>
