--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 									<i class="icon-star"></i>
 								</div>
 								<div class="fh5co-text">
-									<p>На кухне будут присутствовать объекты взаимодействия, которые могут как помогать так и мешать в сражениях.</p>
+									<p>На кухне будут присутствовать объекты взаимодействия, которые могут как помогать, так и мешать в сражениях.</p>
 								</div>
 							</div>
 
