--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
 							<p><a href="#">Референсы:</a> </p>
 						</div>
 						<center>
+						<p><img src="images/3.jpg"></p>
 						<p><img src="images/1.gif" width="400" height="200"></p>
 						<img src="images/2.gif" width="400" height="200">
 						</center>
